# OSS-labs

./: README.md  bio.md
labs/lab-01/: report.md
labs/lab-02/: first.py  report.md
labs/lab-03/: report.md
labs/lab-04/: report.md
labs/lab-05/: Tutorial  TutorialConfig.h  cmake_install.cmake  report.md
labs/lab-05/Lab-Example/: CMakeCache.txt  CMakeLists.txt  LabExample  LabExampleShared  Makefile  cmake_install.cmake
labs/lab-05/Lab-Example/cmake/: CMakeCache.txt  LabExample  LabExampleShared  Makefile  cmake_install.cmake
labs/lab-05/MathFunctions/: CMakeLists.txt
labs/lab-05/cmake-tutorial/: CMakeCache.txt  CMakeLists.txt  Makefile  tutorial.cxx
labs/lab-05/cmake-tutorial/MathFunctions/: CMakeLists.txt  mysqrt.cxx
labs/lab-05/cmake-tutorial/source/: CMakeLists.txt
labs/lab-06/: report.md
labs/lab-06/hello-docker/: Dockerfile
labs/lab-06/messageApp/: Dockerfile  docker-compose.yml  package-lock.json  package.json
labs/lab-07/: plot_words-v1.py  plot_words.py  plot_words4.py  report.md  test.py
labs/lab-08/: report.md
labs/lab-09/: lab9-check1.py  lab9-check3.py  report.md
